# gfx_gltf_anim

./: Cargo.toml  build.rs  imgui.ini
data/: quad.frag
data/models/: Jet.gltf  ModoExport.glb  ModoExport.gltf  Running.glb
data/shaders/: generate_indices.comp  generate_vertices.comp  imgui.vert  passthru.tesc  passthru.tese  pntriangles.tesc  pntriangles.tese  qef.glsl  quad.frag  quad.vert  shadow.vert  test.comp
src/: cimgui_hal.rs  compute.rs  gfx_helpers.rs  gltf_loader.rs  gpu_buffer.rs  main.rs  mesh.rs
