[package]
name = "gfx_gltf_anim"
version = "0.1.0"
authors = ["Forest Sharp <forestcollinssharp@gmail.com>"]
build = "build.rs"

[features]
default = []
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]

[dependencies]
cimgui = { git = "https://github.com/ForestCSharp/cimgui-rs.git" }
num = "*"
winit = "0.19"
image = "0.21"
nalgebra-glm = "0.4"
time = "0.1.42"
glsl-to-spirv = "0.1"
gltf = "0.12"
rand = "0.6.5"
memoffset = "0.5"

#Parallelism
scoped_threadpool = "0.1.9"
num_cpus = "1.10.0"

log = "0.4.6"
env_logger = "0.6.1"

gfx-hal = "0.3.0"


# gfx-backend-vulkan = { git = "https://github.com/ForestCSharp/gfx.git", optional = true }
gfx-backend-vulkan = { version = "0.3.0", optional = true, features = ["winit", "x11"]}
[target.'cfg(windows)'.dependencies]
gfx-backend-dx11 = { version = "0.3.0", optional = true, features = ["winit"]}
gfx-backend-dx12 = { version = "0.3.0", optional = true, features = ["winit"]}
[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = { version = "0.3.0", optional = true, features = ["winit"]}
